--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- style link -->
-     <link rel="stylesheet" href="assets/css/style.css">
+     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -62,6 +62,7 @@
 
 
     
-    <script src="assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
